# ROS_TP

./: README.md  diff.txt
gripx_control/config/: kinova_joint_state.yaml  kinova_position.yaml
gripx_control/launch/: gripx_control.launch  gripx_control2.launch
gripx_description/rviz/: urdf.rviz
gripx_description/urdf/: gripx_gazebo.urdf
gripx_gazebo/launch/: gazebo.launch
gripx_moveit_config/launch/: moveit_planning_execution.launch  moveit_pllanning_execution.launch  ros_controllers.launch
marker1/: package.xml
marker1/msg/: point_msg.msg
marker1/src/: marker_all_in1.cpp  position_publisher.cpp
moveit_packages/: CMakeLists.txt  package.xml
moveit_packages/controllers/: CMakeLists.txt
moveit_packages/controllers/include/controllers/: utils.h
moveit_packages/controllers/src/: pose_control.cpp  roll_motion.cpp  utils.cpp
moveit_packages/move_group_interface/src/: move_group_interface_tutorial.cpp
